--- a/rs-phash/Cargo.toml
+++ b/rs-phash/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
+edition = "2018"
 name = "rs-phash"
 version = "0.1.0"
-edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-image = "*"
-rustdct = "*"
+anyhow = "1"
+image = "0.23"
+rustdct = "0.6"
+structopt = "0.3.25"
