--- a/rs-phash/Cargo.toml
+++ b/rs-phash/Cargo.toml
@@ -7,8 +7,9 @@ version = "0.1.0"
 
 [dependencies]
 anyhow = "1"
-image = "0.23"
-# image = { path = "../../image" }
+# image = "0.23"
+image = { path = "../../image" }
 rustdct = "0.6"
 structopt = "0.3.25"
 transpose = "0.2"
+num-traits = "0.2.14"
